# file-renamer

./: .gitignore  LICENSE  README.md  pyproject.toml  renamer_cli.py  requirements-dev.txt
.github/workflows/: ci.yml
examples/: basic_usage.py  remote_rename.py
renamer/: README.md  __init__.py  factory.py  mypy.ini  protocols.py
renamer/core/: __init__.py  hash_strategy.py  sanitizer.py  sidecar.py
renamer/domain/: __init__.py  models.py
renamer/operations/: __init__.py  base.py  local.py  remote.py
tests/: test_sanitizer.py
